# alfredpy

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
alfredpy/: __init__.py  background.py  notify.py  update.py  util.py  web.py  workflow.py  workflow3.py
extras/: benchmark.py  gen_icon_table.py  generate_workflow_list.py
extras/benchmarks/01-read-info-plist/: script.py
extras/benchmarks/03-read-envvars/: script.py
tests/: conftest.py  info.plist  test_background.py  test_notify.py  test_update.py  test_update_versions.py  test_util.py  test_util_atomic.py  test_util_lockfile.py  test_util_uninterruptible.py  test_web.py  test_web_http_encoding.py  test_workflow.py  test_workflow3.py  test_workflow_env.py  test_workflow_files.py  test_workflow_filter.py  test_workflow_import.py  test_workflow_keychain.py  test_workflow_magic.py  test_workflow_magic_alfred2.py  test_workflow_run.py  test_workflow_serializers.py  test_workflow_settings.py  test_workflow_update.py  test_workflow_versions.py  test_workflow_xml.py  util.py
tests/data/: utf8.xml
ualfred/: web.py  workflow.py
workflow/: __init__.py  background.py  notify.py  update.py  util.py  web.py  workflow.py  workflow3.py
